[gd_scene load_steps=5 format=3 uid="uid://r8f734t63t8e"]

[ext_resource type="Script" path="res://entities/abilities/panzer/actions/panzer_attack_action.gd" id="1_pfykb"]
[ext_resource type="PackedScene" uid="uid://uh2jkp1y03h" path="res://projectiles/bullet/bullet.tscn" id="2_j1111"]
[ext_resource type="Script" path="res://entities/collision_box.gd" id="3_mcih7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ypaq"]
radius = 72.0

[node name="Attack" type="Node2D"]
script = ExtResource("1_pfykb")
bullet_projectile = ExtResource("2_j1111")
bullet_collision_layer = 4
bullet_collision_mask = 8

[node name="MuzzleRotator" type="Node2D" parent="."]

[node name="MuzzleMarker" type="Marker2D" parent="MuzzleRotator"]
position = Vector2(0, -8)

[node name="ReloadTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource("3_mcih7")

[node name="CollisionShape" type="CollisionShape2D" parent="AttackBox"]
shape = SubResource("CircleShape2D_4ypaq")
debug_color = Color(0.701961, 0, 0, 0)
